src/objects/WattylAccountGradingLookupTable__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Wattyl Account Grading Formula Lookup Table</description>
    <fields>
        <fullName>Best_Customer_Grading__c</fullName>
        <label>Best Customer Grading</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category for lookup value</description>
        <inlineHelpText>Match Category to existing value in the list.</inlineHelpText>
        <label>Category</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Growth_Grading__c</fullName>
        <label>Customer Growth Grading</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key_Field_1__c</fullName>
        <label>Key Field 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max__c</fullName>
        <label>Max</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min__c</fullName>
        <label>Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Grading__c</fullName>
        <label>Other Grading</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Text_Value_1__c</fullName>
        <label>Text Value 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Value_2__c</fullName>
        <label>Text Value 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Value_3__c</fullName>
        <label>Text Value 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Wattyl Account Grading Lookup Table</label>
</CustomObject>